# global_price_index_RUST

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  controller.rs  lib.rs  main.rs  service.rs
src/exchanges/: binance.rs  huobi.rs  kraken.rs  mod.rs
tests/: integration_test.rs
