[package]
name = "global_price_index"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
deadpool-redis = "0.10"
redis = { version = "0.25", features = ["async-std", "aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
