[package]
name = "global_price_index"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
deadpool-redis = "0.10"
redis = { version = "0.25", features = ["async-std", "aio", "tokio-comp"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio-retry = "0.3"
serde_json = "1.0.117"
tokio-tungstenite = { version = "*", features = ["tls"] }
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.16"}
flate2 = "1.0.30"